added sound designers comments, comparison page and referece page

--- a/allarms.html
+++ b/allarms.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>RTSFX Review Home</title>
+    <title>RTSFX Review Telephon Bell</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -17,7 +17,6 @@
       div.boxed {
       border: 1px solid lightblue ; width: 5% ;
       }
-        </style>
     </style>
   </head>
   <!--------------------------------------------------------------------------->
@@ -64,13 +63,17 @@
           &nbsp; &nbsp;|
           &nbsp;
           <a
-          href="combinations.html">
+          href="comb.html">
           Combinations</a>
-          &nbsp;
           <hr></hr>
+          | &nbsp; &nbsp;
+          <a
+          href="references.html">
+          References</a>
+          &nbsp; &nbsp;|
+          <hr width=30%></hr>
         </font>
       </center>
-    &nbsp;
   </div>
   </header>
   <!--------------------------------------------------------------------------->
@@ -101,10 +104,10 @@
                 <p> Interface comments
                 <br \ >
                   <ul>
-                      <li>  Pedestrian Crossing is missing on the pop-up menu (once you are into a specific sound synthesis) </li>
-                      <li>	Clock is missing on the pop-up menu (once you are into a specific sound synthesis) </li>
-                      <li>	Add number boxes to display slider values with relative unit of measure (e.g. Hz, seconds) </li>
-                      <li>	"Bell 1 Pitch" - change "pitch" to "frequency" to be consistents with taxonomy used in the other sounds </li>
+                      <li>  Pedestrian Crossing is missing on the pop-up menu (once you are into a specific sound synthesis) </li><br>
+                      <li>	Clock is missing on the pop-up menu (once you are into a specific sound synthesis) </li><br>
+                      <li>	Add number boxes to display slider values with relative unit of measure (e.g. Hz, seconds) </li><br>
+                      <li>	"Bell 1 Pitch" - change "pitch" to "frequency" to be consistents with taxonomy used in the other sounds </li><br>
                   </ul>
                 </p>
               </font>
@@ -118,9 +121,9 @@
           <p> Model comments
           <br \ >
             <ul>
-                <li>  Timing issue: bells should be triggered much faster, triggering frequency should be between 8 and 10 Hz</li>
-                <li>	The synthesis in itself sounds good (the distribution and amplitude of partials of single bells are similar to selected sample) </li>
-                <li>	Add an impulsive noisy component to each bell sound (simulation of hammer beating the bell)? </li>
+                <li>  Timing issue: <b> bells should be triggered much faster </b>, triggering frequency should be between 8 and 10 Hz</li><br>
+                <li>	The synthesis in itself sounds good (the distribution and amplitude of partials of single bells are similar to selected sample) </li><br>
+                <li>	Add an impulsive noisy component to each bell sound (simulation of hammer beating the bell)? </li><br>
             </ul>
           </p>
         </font>
@@ -134,9 +137,9 @@
       <p> Sound designers comments
       <br \ >
         <ul>
-            <li>  Not bad, but the bell type could have some more choices as it may pass for an older style phone bell, but not the more modern ones IMHO </li>
-            <li>	The presets were a little sluggish to operate (browser related maybe) </li>
-            <li>	The parameters only produce usable sounds in very specific sweet-spots </li>
+            <li>  Not bad, but the bell type could have some more choices as it may pass for an older style phone bell, but not the more modern ones IMHO </li><br>
+            <li>	The presets were a little sluggish to operate (browser related maybe) </li><br>
+            <li>	The parameters only produce usable sounds in very specific sweet-spots </li><br>
         </ul>
       </p>
     </font>
@@ -146,6 +149,7 @@
     &nbsp;
   <!--------------------------------------------------------------------------->
         <div class="container">
+        <p align="center"> <b> RTSFX syntheses - Recorded samples comparison. </b> </p> <br>
           <div class="row">
             <a name="Bell"></a>
             <div class="col-md-6">
