--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       div.boxed {
       border: 1px solid lightblue ; width: 5% ;
       }
-        </style>
     </style>
   </head>
   <!--------------------------------------------------------------------------->
@@ -64,13 +63,17 @@
           &nbsp; &nbsp;|
           &nbsp;
           <a
-          href="combinations.html">
+          href="comb.html">
           Combinations</a>
-          &nbsp;
           <hr></hr>
+          | &nbsp; &nbsp;
+          <a
+          href="references.html">
+          References</a>
+          &nbsp; &nbsp;|
+          <hr width=30%></hr>
         </font>
       </center>
-    &nbsp;
   </div>
   </header>
     <!--------------------------------------------------------------------------->
@@ -85,11 +88,12 @@
         <h2>
           <center>
             <font size="3">
-              <p> This web page presents a systematic comparison between the RTSFX sounds with high quality samples. <br>
+              <p> Here you can find a systematic comparison between the RTSFX sounds with high quality samples. <br>
                   High quality sounds representative of the sonic taxonomies present in the RTSFX index have been selected. <br>
                   The comparison is carried out using scientific tools for the representation and analysis of audio data (e.g. Sonic Visualiser). <br>
                   In order to highligt differencies, similarities and potential improovements, for each analysed sound, a few comments are provided. <br>
-                  Furthermore, while comparing the various sonic materials it is was possible to individiuate those RTSFX settings associated to the most accurate reproduction of the various samples considered. <br>
+                  Furthermore, while comparing the various sonic materials it is was possible to individiuate those RTSFX settings associated to the most accurate
+                  reproduction of the various samples considered. <br>
                   This process therefore helps to define RTSFX pre-sets, for each sound a link to related RTSFX settings is therefore provided. <br>
                   Not all the RTSFX sounds are here evaluated, the focus is on those sounds that, according to the author viewpoint, needs to be significantly improoved. <br>
               </p>
@@ -99,7 +103,7 @@
       </div>
       <div class="container">
         <a href="http://c4dm.eecs.qmul.ac.uk/audioengineering/RTSFX/" target="_blank">
-        <img src="spectrogram/index.jpg" alt="RTSFX Telephon Bell Spectrogram" width="100%">
+        <img src="images/index.jpg" alt="RTSFX Telephon Bell Spectrogram" width="100%">
       </a>
       </div>
     </body>
