--- a/mammals.html
+++ b/mammals.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>RTSFX Review Home</title>
+    <title>RTSFX Review Mammals</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -17,7 +17,6 @@
       div.boxed {
       border: 1px solid lightblue ; width: 5% ;
       }
-        </style>
     </style>
   </head>
   <!--------------------------------------------------------------------------->
@@ -64,13 +63,17 @@
           &nbsp; &nbsp;|
           &nbsp;
           <a
-          href="combinations.html">
+          href="comb.html">
           Combinations</a>
-          &nbsp;
           <hr></hr>
+          | &nbsp; &nbsp;
+          <a
+          href="references.html">
+          References</a>
+          &nbsp; &nbsp;|
+          <hr width=30%></hr>
         </font>
       </center>
-    &nbsp;
   </div>
   </header>
 <!--------------------------------------------------------------------------->
@@ -110,32 +113,31 @@
             <p> Interface comments
             <br\>
               <ul>
-                <li> The taxonomy used for the sliders is a mix between perceptual and technical labels (e.g. Filter Q and Harshness) <br>
-                    It would be good to group and saparate the two types of taxonomies so that the interface is conceptually more clear. <br>
-                    For this model, better to avaid "obsucre" technical parameters (e.g. pulse open closed and return) and privilage more perceptual controls. </li> <br>
-                <li> Generally, for technical labels, add number boxes to display sliders values </li> <br>
-                <li> "Pulse Open" slider is a bit obscure (its variation is difficult to identify with changes in the generated sound - expecially with short sound) <br>
-                     The impression is that this paramiter filters the sound making it "more or less open" (i.e. highpass filter) <br>
-                     The parameter is not a continuos value: it has only trhee steps. Consider onther GUI object (e.g. selector) </li> <br>
-                <li> "Pulse Close" - same as above, but it seems to function as a low pass filter. Consider onther GUI object (e.g. selector) </li> <br>
-                <li> "Pulse Return" - same as above, but it seems to function as a band pass filter. Consider onther GUI object (e.g. selector) </li> <br>
-                <li> Consider to hide the "Pulse" sliders and control them trough another paramiter. This would make the interface simpler </li> <br>
+                <li> The taxonomy used for the sliders is a mix between perceptual and technical labels (e.g. Filter Q and Harshness)
+                     It would be good to <b> group and saparate technical and perceptual taxonomies </b> so that the interface is conceptually more clear. </li> <br>
+                <li> For this model, better to <b> avoid "obsucre" technical parameters (e.g. pulse open closed and return) </b> and privilage more perceptual controls. </li> <br>
+                <li> Generally, for technical labels, <b> add number boxes to display sliders values </b> </li> <br>
+                <li> While discussing with Will, it emerged that, in order to simplify the interface, it would be good to <b> group the parameters "pulse open, pulse close, pulse return,
+                     noisiness and harshness" into a singol slider </b>. The parameter could refer to a perceptual feature such as "harshness or growlness". Pulse sliders change
+                     the sound as less harsh (with low values) and more harsh (with high values). </li> <br>
+                <li> The slider Filter Q refer to "F0", "F1", "F2", "F3" (which are the central frequencies of band pass filters). Change "filter Q" in something that refer
+                     to the formant sounds (e.g. formants brightness). </li>  <br>
                 <li> "Duration" - add a number box to specify slider value (in seconds?) </li> <br>
-                <li> "F0", "F1", "F2", "F3" - better define this paramiters - more explicitly (e.g. Fundamental Frequency, First partial, Second partial, Third Partial) <br>
-                     Add number boxes to specify sliders values (in Hz?) </li> <br>
+                <li> Better define the paramiters "F0", "F1", "F2", "F3": more explicitly <b>(e.g. Fundamental Frequency, First formant, Second formant, Third formant)</b> </li> <br>
               </ul>
             </p>
             <hr></hr>
             <p> Model comments
               <br\>
               <ul>
-                <li> While playing the sounds artifacts are generated (clicks) </li>  <br>
-                <li> Each time the algorithm is triggered the resulting sounds is slitly different. This seems to be related to (i) the variation of the
-                     amplitude evenvelop (genralli divided in two parts) and (ii) the variation of the fundamental frequency (glissando).
-                     This does not happen when I play the pd patch. Potentially it would be good to allow the user to control this two feature
-                     (e.g. select between differnt possiblities). Ideally, if the parameters are not changed the sound should be always the same </li> <br>
+                <li> While playing <b> sounds artifacts are generated (clicks) </b> </li>  <br>
+                <li> Each time the algorithm is triggered the <b>resulting sounds is slitly different</b>. This seems to be related to (i) the variation of the
+                     amplitude evenvelop (genralli divided in two parts) and (ii) the variation of the fundamental frequency (glissando). Will suggested that <b>this bug
+                     is probably related to the "duration" parameter</b>.
+                     This does not happen when I play the pd patch. Ideally, if the parameters are not changed the sound should be always the same. </li> <br>
                 <li> Increase the frequency range of the "low pass filter" in order to be able to decrease the energy in the lower frequency range  </li> <br>
-                <li> Note that the Growl samples often have the highest component disappering in the second half of the sound, this variation could be introduced for Growl sounds applying a highpass filter </li> <br>
+                <li> Note that the Growl samples often have the highest component disappering in the second half of the sound, this variation could be introduced for
+                     Growl sounds applying a highpass filter </li> <br>
                 <li> RTSFX sounds seems to lack brightness and noisyness. Add more frequency components to get noisy energy in the hihger frequency range </li> <br>
               </ul>
               <br>
@@ -149,10 +151,11 @@
               <br>
             </p>
           </font>
-          </h3>
-          <hr></hr>
-          </div>
+        </h3>
+      <hr></hr>
+    </div>
     <div class="container">
+    <p align="center"> <b> RTSFX syntheses - Recorded samples comparison. </b> </p> <br>
       <div class="row">
         <a name="Fox"></a>
         <div class="col-md-6">
